ci: add python binding tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -201,6 +201,31 @@ jobs:
       - name: run
         run: cargo run --release -p simplify -- inputs/smtlib/arbiter_array_cex_w32d32q16n4b34.smt2 out.smt
 
+  python:
+    name: Test Python Bindings
+    runs-on: ubuntu-24.04
+    timeout-minutes: 5
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+        python:
+          - "3.10"
+
+    steps:
+      - name: Update Rust to ${{ matrix.toolchain }}
+        run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - name: Install uv and set the Python version
+        uses: astral-sh/setup-uv@v6
+        with:
+          python-version: ${{ matrix.python }}
+      - uses: actions/checkout@v4
+      - name: Install the project
+        working-directory: python
+        run: uv sync --locked --all-extras --dev
+      - name: Test
+        working-directory: python
+        run: uv run pytest
 
   semver:
     name: Check Semantic Versioning of Patronus
