--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -29,3 +29,6 @@ features = ["pyo3/extension-module"]
 dev = [
     "pytest>=8.4.2",
 ]
+
+[tool.uv]
+cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "src/*.rs"}]
