--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -11,6 +11,7 @@ name = "patronus"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.26.0" }
+pyo3 = { version = "0.26.0" , features = ["num-bigint"]}
 patronus = { path = "../patronus" }
 baa.workspace = true
+bigint = "4.4.3"
