python: smt solver interface

--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -15,3 +15,4 @@ pyo3 = { version = "0.26.0" , features = ["num-bigint"]}
 patronus = { path = "../patronus" }
 baa = { version = "0.17.1", features = ["rand1", "bigint"] }
 num-bigint = "0.4.6"
+rustc-hash.workspace = true
