--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -215,6 +215,8 @@ jobs:
     steps:
       - name: Update Rust to ${{ matrix.toolchain }}
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - name: Install z3, CVC5, boolector
+        run: sudo apt install -y z3 cvc5 boolector
       - name: Install uv and set the Python version
         uses: astral-sh/setup-uv@v6
         with:
