--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "patronpy"
+name = "pypatronus"
 description = "PyO3 bindings for Patronus"
 version.workspace = true
 rust-version.workspace = true
@@ -7,7 +7,7 @@ edition.workspace = true
 license.workspace = true
 
 [lib]
-name = "patronpy"
+name = "pypatronus"
 crate-type = ["cdylib"]
 
 [dependencies]
