--- a/patronus-firrtl/Cargo.toml
+++ b/patronus-firrtl/Cargo.toml
@@ -13,7 +13,9 @@ rust-version.workspace = true
 patronus = { path = "../patronus" }
 baa.workspace = true
 rustc-hash.workspace = true
+indexmap.workspace = true
 lalrpop-util = { version = "0.22.2", features = ["lexer"]  }
+cranelift-entity = "0.121.2"
 
 [build-dependencies]
 lalrpop = { version = "0.22.2"}
