--- a/patronus-firrtl/Cargo.toml
+++ b/patronus-firrtl/Cargo.toml
@@ -16,4 +16,5 @@ rustc-hash.workspace = true
 indexmap.workspace = true
 cranelift-entity = "0.121.2"
 chumsky = { version = "0.11.2", features = ["regex"] }
+logos = "0.15.1"
 
