--- a/patronus-sca/Cargo.toml
+++ b/patronus-sca/Cargo.toml
@@ -13,5 +13,6 @@ rust-version.workspace = true
 patronus = { path = "../patronus" }
 baa = {version = "0.17.1", features = ["bigint"]}
 rustc-hash.workspace = true
+smallvec.workspace = true
 polysub = "0.2.2"
 bit-set = "0.8.0"
